<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent"
    tools:context=".presentation.characters.SingleCharacterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:layout_width="100dp"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimary" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="20dp"
                android:src="@drawable/ic_icon" />

            <View
                android:layout_width="100dp"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimary" />

        </LinearLayout>

        <TextView
            android:layout_marginHorizontal="30dp"
            android:gravity="center"
            android:id="@+id/tv_character_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/extra_bold"
            android:text="@string/characters_name"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout1" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/character_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="42dp"
            android:scaleType="centerCrop"
            android:src="@drawable/continent1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_character_name"
            app:riv_corner_radius_bottom_left="10dp"
            app:riv_corner_radius_bottom_right="10dp"
            app:riv_corner_radius_top_left="10dp"
            app:riv_corner_radius_top_right="10dp" />


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/character_image">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:orientation="horizontal"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/ic_title"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/character_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/medium"
                        android:text="Title"
                        android:textColor="@android:color/white"
                        android:textSize="15sp" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:orientation="horizontal"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/ic_family" />

                    <TextView
                        android:id="@+id/character_family"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/medium"
                        android:text="@string/family"
                        android:textColor="@android:color/white"
                        android:textSize="15sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/medium"
            android:justificationMode="inter_word"
            android:letterSpacing="0.07"
            android:lineHeight="25dp"
            android:text="@string/description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>